Resolves #1830 Merged the 1.3.1-rc.1 release in develop branch. (#2374)
* Updated Pom versions for release changes (#1910)

Signed-off-by: GitHub <noreply@github.com>
Co-authored-by: Prafulrakhade <Prafulrakhade@users.noreply.github.com>

* [MOSIP-35160] Updated URL from https://github.com/mosip/mosip-infra/blob/master/deployment/v3/utils/copy_cm_func.sh to https://raw.githubusercontent.com/mosip/mosip-infra/master/deployment/v3/utils/copy_cm_func.sh

Signed-off-by: techno-467 <prafulrakhade02@gmail.com>

* [ MOSIP-35499 ]  removed keyGenretor Bean (#1919)

* Merge pull request #1916 from Khuddusshariff0022/develop-comp-scan1

[ MOSIP-35499 ] removed keyGenretor Bean

Signed-off-by: khuddus shariff <khuddusshariff0022@gmail.com>

* [ MOSIP-35499 ] Removed KeyGenerator Bean  (#1915)

* removed key manager

Signed-off-by: khuddus shariff <khuddusshariff0022@gmail.com>

* removed keyGenretor Bean

Signed-off-by: khuddus shariff <khuddusshariff0022@gmail.com>

* removed keyGenretor Bean

Signed-off-by: khuddus shariff <khuddusshariff0022@gmail.com>

---------

Signed-off-by: khuddus shariff <khuddusshariff0022@gmail.com>

---------

Signed-off-by: khuddus shariff <khuddusshariff0022@gmail.com>
Co-authored-by: Chandra Keshav Mishra <chandrakeshavmishra@gmail.com>

* [DSD-6341]added upgrade and rollback sql query

* MOSIP-32461 Changing commons  versions for 1.3.x branch

Signed-off-by: khuddus shariff <khuddusshariff0022@gmail.com>

* MOSIP-32461, MOSIP-36412 Changing commons versions for 1.3.x branch

Signed-off-by: khuddus shariff <khuddusshariff0022@gmail.com>

* MOSIP-32461, MOSIP-36412 Changing commons versions for 1.3.x branch

Signed-off-by: khuddus shariff <khuddusshariff0022@gmail.com>

* MOSIP-32461, MOSIP-36412 Changing versions to 1.3.0-beta.1 for 1.3.x branch

Signed-off-by: khuddus shariff <khuddusshariff0022@gmail.com>

* MOSIP-32461, MOSIP-36412 Changing versions to 1.3.0-beta.1 for 1.3.x branch

Signed-off-by: khuddus shariff 