@@ -24,7 +24,7 @@
 
 	<groupId>io.mosip.registrationprocessor</groupId>
 	<artifactId>registration-processor</artifactId>
-	<version>1.2.1-SNAPSHOT</version>
+	<version>1.4.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>registration-processor</name>
@@ -37,7 +37,7 @@
 		<maven.compiler.source>21</maven.compiler.source>
 		<maven.compiler.target>21</maven.compiler.target>
 		<maven.compiler.version>3.8.0</maven.compiler.version>
-		<maven.jar.plugin.version>3.3.0</maven.jar.plugin.version>
+		<maven.jar.plugin.version>3.0.2</maven.jar.plugin.version>
 		<maven.war.plugin.version>3.1.0</maven.war.plugin.version>
 		<maven.surefire.plugin.version>2.22.0</maven.surefire.plugin.version>
 		<maven.jacoco.version>0.8.11</maven.jacoco.version>
@@ -66,8 +66,8 @@
 		<h2.version>1.4.195</h2.version>
 		<postgresql.version>42.2.2</postgresql.version>
 
-		<!-- Lombok -->
-		<lombok.version>1.18.8</lombok.version>
+		<!-- Lombok (1.18.38+ fixes TypeTag::UNKNOWN with Java 21+; 1.18.30+ for Java 21) -->
+		<lombok.version>1.18.38</lombok.version>
 
 		<!-- For Cache -->
 		<ignite.version>2.3.0</ignite.version>
@@ -116,34 +116,34 @@
 		<activemq.client.version>6.1.2</activemq.client.version>
 
 		<!-- local -->
-		<registration.status.service.version>1.2.1-SNAPSHOT</registration.status.service.version>
-		<registration.processor.core.version>1.2.1-SNAPSHOT</registration.processor.core.version>
-		<packet.manager.version>1.2.1-SNAPSHOT</packet.manager.version>
-		<registration.processor.rest.client.version>1.2.1-SNAPSHOT</registration.processor.rest.client.version>
-		<packet.info.storage.service.version>1.2.1-SNAPSHOT</packet.info.storage.service.version>
-		<packet.bio.dedupe.service.impl.version>1.2.1-SNAPSHOT</packet.bio.dedupe.service.impl.version>
-		<registration.processor.message.sender.version>1.2.1-SNAPSHOT</registration.processor.message.sender.version>
+		<registration.status.service.version>1.4.0-SNAPSHOT</registration.status.service.version>
+		<registration.processor.core.version>1.4.0-SNAPSHOT</registration.processor.core.version>
+		<packet.manager.version>1.4.0-SNAPSHOT</packet.manager.version>
+		<registration.processor.rest.client.version>1.4.0-SNAPSHOT</registration.processor.rest.client.version>
+		<packet.info.storage.service.version>1.4.0-SNAPSHOT</packet.info.storage.service.version>
+		<packet.bio.dedupe.service.impl.version>1.4.0-SNAPSHOT</packet.bio.dedupe.service.impl.version>
+		<registration.processor.message.sender.version>1.4.0-SNAPSHOT</registration.processor.message.sender.version>
 
 		<!-- Kernel -->
-		<kernel.core.version>1.2.1-SNAPSHOT</kernel.core.version>
-		<kernel.dataaccess.hibernate.version>1.2.1-SNAPSHOT</kernel.dataaccess.hibernate.version>
-		<kernel.templatemanager.velocity.version>1.2.1-SNAPSHOT</kernel.templatemanager.velocity.version>
-		<kernel.idvalidator.uin.version>1.2.1-SNAPSHOT</kernel.idvalidator.uin.version>
-		<kernel.idvalidator.rid.version>1.2.1-SNAPSHOT</kernel.idvalidator.rid.version>
-		<kernel.cbeffutil.version>1.2.1-SNAPSHOT</kernel.cbeffutil.version>
-		<kernel.bioapi.provider.version>1.2.1-SNAPSHOT</kernel.bioapi.provider.version>
-		<kernel.auth.adapter.version>1.2.1-SNAPSHOT</kernel.auth.adapter.version>
-		<kernel.pdfgenerator.itext.version>1.2.1-SNAPSHOT</kernel.pdfgenerator.itext.version>
-		<kernel.qrcodegenerator.zxing.version>1.2.1-SNAPSHOT</kernel.qrcodegenerator.zxing.version>
-		<kernel.logger.logback.version>1.2.1-SNAPSHOT</kernel.logger.logback.version>
-		<kernel.idvalidator.vid.version>1.2.1-SNAPSHOT</kernel.idvalidator.vid.version>
-		<object.store.khazana.version>1.2.1-SNAPSHOT</object.store.khazana.version>
-		<kernel.biometrics.api.version>1.2.1-SNAPSHOT</kernel.biometrics.api.version>
-		<kernel-keymanager-service.version>1.2.1-SNAPSHOT</kernel-keymanager-service.version>
-		<kernel.websubclient.version>1.2.1-SNAPSHOT</kernel.websubclient.version>
-		<kernel-biosdk-provider.version>1.2.1-SNAPSHOT</kernel-biosdk-provider.version>
-		<kernel.bom.version>1.2.1-SNAPSHOT</kernel.bom.version>
-		<kernel-idvalidator-vid.version>1.2.1-SNAPSHOT</kernel-idvalidator-vid.version>
+		<kernel.core.version>1.4.0-SNAPSHOT</kernel.core.version>
+		<kernel.dataaccess.hibernate.version>1.4.0-SNAPSHOT</kernel.dataaccess.hibernate.version>
+		<kernel.templatemanager.velocity.version>1.4.0-SNAPSHOT</kernel.templatemanager.velocity.version>
+		<kernel.idvalidator.uin.version>1.4.0-SNAPSHOT</kernel.idvalidator.uin.version>
+		<kernel.idvalidator.rid.version>1.4.0-SNAPSHOT</kernel.idvalidator.rid.version>
+		<kernel.cbeffutil.version>1.4.0-SNAPSHOT</kernel.cbeffutil.version>
+		<kernel.bioapi.provider.version>1.4.0-SNAPSHOT</kernel.bioapi.provider.version>
+		<kernel.auth.adapter.version>1.4.0-SNAPSHOT</kernel.auth.adapter.version>
+		<kernel.qrcodegenerator.zxing.version>1.4.0-SNAPSHOT</kernel.qrcodegenerator.zxing.version>
+		<kernel.logger.logback.version>1.4.0-SNAPSHOT</kernel.logger.logback.version>
+		<kernel.idvalidator.vid.version>1.4.0-SNAPSHOT</kernel.idvalidator.vid.version>
+		<object.store.khazana.version>1.4.0-SNAPSHOT</object.store.khazana.version>
+		<kernel.biometrics.api.version>1.4.0-SNAPSHOT</kernel.biometrics.api.version>
+		<kernel-keymanager-service.version>1.5.0-SNAPSHOT</kernel-keymanager-service.version>
+		<kernel.websubclient.version>1.4.0-SNAPSHOT</kernel.websubclient.version>
+		<kernel-biosdk-provider.version>1.4.0-SNAPSHOT</kernel-biosdk-provider.version>
+		<kernel.bom.version>1.4.0-SNAPSHOT</kernel.bom.version>
+        <kernel.websubclient.api.version>1.4.0-SNAPSHOT</kernel.websubclient.api.version>
+        <kernel-idvalidator-vid.version>1.4.0-SNAPSHOT</kernel-idvalidator-vid.version>
 		<sonar.coverage.exclusions>**/dto/**,
 			**/exception/*Exception.java,
 			**/config/*Config.java,
@@ -277,24 +277,24 @@
 	</properties>
 
     <repositories>
-        <repository>
-            <id>ossrh</id>
-            <name>CentralRepository</name>
-            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-            <layout>default</layout>
-            <snapshots>
-            <enabled>true</enabled>
-            </snapshots>
-        </repository>
-        <repository>
-            <id>central</id>
-            <name>MavenCentral</name>
-            <layout>default</layout>
-            <url>https://repo1.maven.org/maven2</url>
-            <snapshots>
-            <enabled>false</enabled>
-            </snapshots>
-        </repository>
+		<repository>
+			<id>ossrh-central</id>
+			<name>MavenCentralRepository</name>
+			<url>https://central.sonatype.com/repository/maven-snapshots</url>
+			<layout>default</layout>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
+		<repository>
+			<id>central</id>
+			<name>MavenCentral</name>
+			<layout>default</layout>
+			<url>https://repo1.maven.org/maven2</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</repository>
     </repositories>
 	<distributionManagement>
 		<snapshotRepository>
@@ -413,6 +413,7 @@
 							--add-opens java.base/java.text=ALL-UNNAMED 
 							--add-opens java.base/java.util.stream=ALL-UNNAMED
 							--add-opens java.base/java.util.concurrent=ALL-UNNAMED
+							--add-opens java.base/sun.util.calendar=ALL-UNNAMED
 							--add-opens java.xml/com.sun.org.apache.xerces.internal.impl=ALL-UNNAMED
 							--illegal-access=permit
 						</argLine>
@@ -444,9 +445,16 @@
 					<configuration>
 						<source>${maven.compiler.source}</source>
 						<target>${maven.compiler.target}</target>
+						<annotationProcessorPaths>
+							<path>
+								<groupId>org.projectlombok</groupId>
+								<artifactId>lombok</artifactId>
+								<version>${lombok.version}</version>
+							</path>
+						</annotationProcessorPaths>
 						<compilerArgs>
-                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
-        </compilerArgs>
+							<arg>--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+						</compilerArgs>
 					</configuration>
 				</plugin>
 				<plugin>
@@ -559,7 +567,6 @@
 						<autoPublish>false</autoPublish>
 					</configuration>
 				</plugin>
-
 		<plugin>
                   <groupId>org.apache.maven.plugins</groupId>
                   <artifactId>maven-source-plugin</artifactId>
@@ -624,4 +631,6 @@
 		</profile>
 	</profiles>
 </project>
+
+
 
